Sat Sep  7 13:29:22 2013  Kazuki Tsujimoto  <kazuki@callcc.net>

	* lib/find.rb (Find.find): respect the encodings of arguments.
	  [ruby-dev:47530] [Feature #8657]

	* test/test_find.rb: add tests.

Sat Sep  7 10:40:32 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/mkconstants.rb (TCP_FASTOPEN): Defined for TCP fast open.
	  [ruby-core:57048] [Feature #8871] patch by Masaki Matsushita.

Fri Sep  6 23:53:31 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* common.mk: use RUNRUBY instead of MINIRUBY because MINIRUBY can't
	  require extension libraries. The patch is from nobu
	  (Nobuyoshi Nakada).

	* ext/thread/extconf.rb: for build ext/thread/thread.c.

	* include/ruby/intern.h: ditto.

	* thread.c: ditto.

	* lib/thread.rb: removed and replaced by ext/thread/thread.c.

	* ext/thread/thread.c: Queue, SizedQueue and ConditionVariable
	  implementations in C. This patch is based on patches from panaggio
	  (Ricardo Panaggio) and funny_falcon (Yura Sokolov) and  ko1
	  (Koichi Sasada). [ruby-core:31513] [Feature #3620]

	* test/thread/test_queue.rb (test_queue_thread_raise): add a test for
	  ensuring that killed thread should be removed from waiting threads.
	  It is based on a code by ko1 (Koichi Sasada). [ruby-core:45950]

Fri Sep  6 22:47:12 2013  Tanaka Akira  <akr@fsij.org>

	* configure.in: Define ac_cv_func_clock_getres to yes for mingw*.

Fri Sep  6 21:04:10 2013  Tanaka Akira  <akr@fsij.org>

	* rational.c: Include gmp.h if GMP is used.
	  (GMP_GCD_DIGITS): New macro.
	  (rb_gcd_gmp): New function.
	  (f_gcd_normal): Renamed from f_gcd.
	  (rb_gcd_normal): New function.
	  (f_gcd): Invoke rb_gcd_gmp or f_gcd_normal.

	* internal.h (rb_gcd_normal): Declared.
	  (rb_gcd_gmp): Ditto.

	* ext/-test-/rational: New directory.

	* test/-ext-/rational: New directory.

Fri Sep  6 14:23:22 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (clock_getres): required as well as clock_gettime().
	  [ruby-dev:47699] [Bug #8869]
